--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" type="text/css" href="./style.css"/>
     <title>Lista de Produtos</title>
 </head>
-<body onload = 'dados()'>
+<body>
     <section id="sessao-venda">
         <h1>Lojinha do Sr. Miagui</h1>
         <article id="itens_section">
         </article>
     </section>
-
 
     <script src="interaction.js"></script>
 </body>
